--- a/ExamenCiclo8/app/src/main/res/layout/cuenta_string.xml
+++ b/ExamenCiclo8/app/src/main/res/layout/cuenta_string.xml
@@ -15,31 +15,8 @@
             android:id="@+id/tvName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:textSize="20sp" />
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="108dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="vertical">
-
-        <Button
-            android:id="@+id/Registrar"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:text="Registrar" />
-
-        <Button
-            android:id="@+id/Mostrar"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:text="Ver" />
-
-        <Button
-            android:id="@+id/Sincronizar"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:text="Sincro" />
-    </LinearLayout>
 </LinearLayout>
